--- a/StockPredictionModelv2.ipynb
+++ b/StockPredictionModelv2.ipynb
@@ -2536,7 +2536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"span5 alert alert-info\">\n",
+    "<div class=\"alert alert-info\">\n",
     "<p>\n",
     "    <br/>\n",
     "Now lets try and train our data using a TimeSeriesSplit which is specifically used for splitting the dataset to \n",
