Add client details

--- a/StockPredictionModelv3.ipynb
+++ b/StockPredictionModelv3.ipynb
@@ -29,6 +29,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clients:\n",
+    "\n",
+    "### Listed Companies:\n",
+    "\n",
+    "Currently the prediction model is only for one company. But the same model can further be used to predict stock prices for any of the companies listed on Nasdaq. The companies can use the model to predict the company’s stock prices and make business decisions.\n",
+    "\n",
+    "Ex: Dow Jones, Apple, Google etc\n",
+    "\n",
+    "### Stock Brokers, Brokerage Firms and Buyers:\n",
+    "\n",
+    "The other set of customers would be stock brokers and buyers who would want to predict stock prices and make decisions (buy or sell) accordingly. Insights on the seasonal trends and growth can be analyzed using the model.\n",
+    "\n",
+    "Ex: Gardner Rich & Co, Charles Schwab, Stratton Oakmont etc"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
